@@ -408,7 +408,7 @@ class ImageGraphicsEngine extends PDFGraphicsStreamEngine {
             try (InputStream embeddedIs = TikaInputStream.get(buffer.toByteArray())) {
                 embeddedDocumentExtractor
                         .parseEmbedded(embeddedIs, new EmbeddedContentHandler(xhtml), metadata,
-                                false);
+                                true);
             }
         }
 
@@ -429,7 +429,7 @@ class ImageGraphicsEngine extends PDFGraphicsStreamEngine {
             parseContext.set(ZeroByteFileException.IgnoreZeroByteFileException.class,
                     ZeroByteFileException.IGNORE_ZERO_BYTE_FILE_EXCEPTION);
             embeddedDocumentExtractor.parseEmbedded(TikaInputStream.get(new byte[0]),
-                    new EmbeddedContentHandler(xhtml), metadata, false);
+                    new EmbeddedContentHandler(xhtml), metadata, true);
         } finally {
             //replace whatever was there before
             parseContext.set(ZeroByteFileException.IgnoreZeroByteFileException.class, before);
